--- a/pytest.ini
+++ b/pytest.ini
@@ -9,7 +9,7 @@ log_format = %(asctime)s [%(name)s] [%(levelname)s] - %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
 
 log_file = run.log
-log_file_level = DEBUG
+log_file_level = INFO
 log_file_format = %(asctime)s %(name)s %(levelname)s: %(message)s
 
 log_cli = True
